--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "clinicadentalbackend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Es un proyecto de backEnd de destion de citas de una clinica dental, donde el cliente se puede registrar, ver sus citas pendientes, crear una cita y anularla.",
+  "main": "app.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "start_dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,12 +24,5 @@
   "bugs": {
     "url": "https://github.com/Paula-333/ClinicaDentalBackEnd/issues"
   },
-  "homepage": "https://github.com/Paula-333/ClinicaDentalBackEnd#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
-  }
+  "homepage": "https://github.com/Paula-333/ClinicaDentalBackEnd#readme"
 }
